--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LESSON HEROKU</title>
 </head>
 <body>
-
+    <h1>INSIDE BASE</h1>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about-me">About Me</a></li>
+    </ul>
     {% block content %}
+
     {% endblock content %}
 
 </body>
