--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
-{% entends "base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
-
+    <h1>INSIDE INDEX.HTML</h1>
+<p>Name: {{name}}</p>
+<p>Current year: {{year}}</p>
 {% endblock content %}
